<resources>
    <string name="app_name">Business Card</string>
    <string name="label_telefone">Telefone:</string>
    <string name="label_nome">Nome:</string>
    <string name="cart_o_de_visitas">Cartão de Visitas</string>
    <string name="label_cor">Cor:</string>
    <string name="label_empresa">Empresa:</string>
    <string name="label_email">E-mail:</string>
    <string name="novo_cartao">Novo Cartão</string>
    <string name="label_sucess">Cartão cadastrado com sucesso</string>
    <string name="SHARE">compartilhar</string>
</resources>